--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.1
 jobs:
   # running commands on a basic image
-  Hello World:
+  Hello-World:
     docker:
       - image: cimg/base:2021.04
     steps:
