--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,28 +10,28 @@ jobs:
           command: |
             echo 'Hello World!'
             echo 'This is the delivery pipeline'
-   # fetching code from the repo
-   Fetch-Code:
-     docker:
-       - image: cimg/base:2021.04
-     steps:
-       - checkout
-       - run:
+  # fetching code from the repo
+  Fetch-Code:
+    docker:
+      - image: cimg/base:2021.04
+    steps:
+      - checkout
+      - run:
           name: Getting the Code
           command: |
             ls -al
-            echo '^^^Your repo files^^^'     
-   # running a node container
-   Using-Node:
-     docker:
-       - image: cimg/node:17.2
-     steps:
-       - run: 
-           name: Running the Node Container
-           command: |
-             node -v
+            echo '^^^Your repo files^^^'
+  # running a node container
+  Using-Node:
+    docker:
+      - image: cimg/node:17.2
+    steps:
+      - run:
+          name: Running the Node Container
+          command: |
+            node -v
 workflows:
-  Example-workflow:
+  Example-Workflow:
     jobs:
       - Hello-World
       - Fetch-Code:
