--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,42 +1,17 @@
 version: 2.1
+
 jobs:
-  # running commands on a basic image
-  Hello-World:
+  my_job:
     docker:
-      - image: cimg/base:2021.04
+      - image: circleci/node:13.8.0
     steps:
+      - run: exit 1
       - run:
-          name: Saying Hello
-          command: |
-            echo 'Hello World!'
-            echo 'This is the delivery pipeline'
-  # fetching code from the repo
-  Fetch-Code:
-    docker:
-      - image: cimg/base:2021.04
-    steps:
-      - checkout
-      - run:
-          name: Getting the Code
-          command: |
-            ls -al
-            echo '^^^Your repo files^^^'
-  # running a node container
-  Using-Node:
-    docker:
-      - image: cimg/node:17.2
-    steps:
-      - run:
-          name: Running the Node Container
-          command: |
-            node -v
+          name: on error
+          command: echo "Hello Error!"
+          when: on_fail
+
 workflows:
-  Example-Workflow:
+  my_workflow:
     jobs:
-      - Hello-World
-      - Fetch-Code:
-          requires:
-            - Hello-World
-      - Using-Node:
-          requires:
-            - Fetch-Code
+      - my_job
